<resources>
    <string name="app_name">AndroidMoviesApp</string>
    <string name="trending_label_TextView">Trending</string>
    <string name="menu_history">History</string>
    <string name="action_label_TextView">Action</string>
    <string name="comedy_label_TextView">Comedy</string>
    <string name="family_label_TextView">Family</string>
    <string name="fantasy_label_TextView">Fantasy</string>
    <string name="movie_banner_description">Movie banner</string>
    <string name="menu_settings">Settings</string>
    <string name="include_adult_setting">include adult</string>
    <string name="menu_contacts">Contacts</string>
    <string name="without_phone_number">Without phone number</string>
    <string name="menu_maps">Google Maps</string>
    <string name="find_maps_button_text">find</string>
    <string name="contact_permittion_dialog_title">Access to contacts</string>
    <string name="contact_permittion_dialog_message">Need to show contacts in app</string>
    <string name="contact_permittion_dialog_allow_button_text">ALLOW</string>
</resources>